--- a/client/index.html
+++ b/client/index.html
@@ -5,21 +5,111 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chatter-Up</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="client.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Chatter-Up</h1>
-    <div id="messages"></div>
-    <form id="message-form">
-        <input type="text" id="message" name="message">
-        <button type="submit">Send</button>
-    </form>
-    <form id="user-form">
-        <input type="text" id="username" name="username">
-        <button type="submit">Set Username</button>
-    </form>
+    <div class="container">
+        <div class="row">
+            <section class="chat chat-wrapper col-md-9 chat-container mt-3 mt-md-0">
+                <header class="chat-header">
+                    <div class="c-h-title d-flex align-items-center justify-content-center">
+                        <div id="greenOnlineDot" class="mx-1"></div>
+                        <span id="userNameSpan" style="color:rgb(152, 251, 152)">Jasmeet Singh</span>
+                        <div id="typing" class="mx-3">...typing</div>
+                    </div>
+                </header>
+                <main class="chat-box">
+                    <!-- Left side message -->
+                    <div class="msg left-msg">
+                        <div class="msg-img" style="background-image: url('../images/deadpool.jpg')"></div>
 
+                        <div class="msg-bubble">
+                            <div class="msg-info">
+                                <div class="msg-info-name">Jasmeet Singh</div>
+                                <div class="msg-info-time">04:40</div>
+                            </div>
+
+                            <div class="msg-text">I'm fine you tell</div>
+                        </div>
+                    </div>
+
+                    <!-- Right side message -->
+                    <div class="msg right-msg">
+                        <div class="msg-img" style="background-image: url('../images/goku.jpg')"></div>
+
+                        <div class="msg-bubble">
+                            <div class="msg-info">
+                                <div class="msg-info-name">Taran</div>
+                                <div class="msg-info-time">04:45</div>
+                            </div>
+
+                            <div class="msg-text">You did the home work ?</div>
+                        </div>
+                    </div>
+                    <!-- Left side message -->
+                    <div class="msg left-msg">
+                        <div class="msg-img" style="background-image: url('../images/deadpool.jpg')"></div>
+
+                        <div class="msg-bubble">
+                            <div class="msg-info">
+                                <div class="msg-info-name">Jasmeet Singh</div>
+                                <div class="msg-info-time">04:40</div>
+                            </div>
+
+                            <div class="msg-text">I'm fine you tell</div>
+                        </div>
+                    </div>
+                    <!-- Right side message -->
+                    <div class="msg right-msg">
+                        <div class="msg-img" style="background-image: url('../images/goku.jpg')"></div>
+
+                        <div class="msg-bubble">
+                            <div class="msg-info">
+                                <div class="msg-info-name">Taran</div>
+                                <div class="msg-info-time">04:45</div>
+                            </div>
+
+                            <div class="msg-text">You did the home work ?</div>
+                        </div>
+                    </div>
+
+                    <!-- Right side message -->
+                    <div class="msg right-msg">
+                        <div class="msg-img" style="background-image: url('../images/goku.jpg')"></div>
+
+                        <div class="msg-bubble">
+                            <div class="msg-info">
+                                <div class="msg-info-name">Taran</div>
+                                <div class="msg-info-time">04:45</div>
+                            </div>
+
+                            <div class="msg-text">You did the home work ?</div>
+                        </div>
+                    </div>
+                </main>
+                <form action="" class="chat-I-area">
+                    <input type="text" class="chat-input" id="chat-input" placeholder="Type a message" />
+                    <button type="submit" class="chat-send-btn">Send</button>
+                </form>
+            </section>
+            <div class="col mt-3">
+                <div class="listUsers">
+                    <div id="showCountOfConnectedUsers" class="listUsers">1</div>
+                    <div id="connected_users" class="listUsers">Jasmeet Singh</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
 
 </html>
